--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@
 
     --font-mona-sans: "Mona Sans", sans-serif;
 
-    --bg-pattern: url ("public/covers/pattern.png");
+    --bg-pattern: url("public/pattern.png");
 }
 
 :root {
